[polish] 个人中心页面文案修正。

--- a/app/views/my/my-index.html
+++ b/app/views/my/my-index.html
@@ -20,6 +20,6 @@
         </p>
     </div>
     <div ng-if="loading" wd-loading></div>
-    <a href="#/account-open" class="btn">继续开户</a>
+    <a href="#/account-open" class="btn">修改开户信息</a>
 </div>
 <div wd-footer></div>
