--- a/app/views/account/login.html
+++ b/app/views/account/login.html
@@ -16,8 +16,8 @@
                 <p class="error">{{user.uiPhoneError || user.uiPasswordError || user.uiServerError}}</p>
             </div>
             <div class="item">
-                <a class="btn login-btn" ng-click="login();">登录</a>
-                <a href="#/account-register" class="btn register-btn">注册</a>
+                <a class="btn login-btn" ng-click="login()">登录</a>
+                <a class="btn register-btn" ng-click="goToRegister()">注册</a>
             </div>
             <div class="item">
                 <a href="#/my-change-password">忘记密码？</a>
