--- a/app/views/account/open.html
+++ b/app/views/account/open.html
@@ -6,19 +6,22 @@
         </div>
         <div class="nav-body">
             <div class="item">
-                <a ng-click="backToStep1();">填写表格</a>
+                <p>
+                    <span class="icon icon-progress2"></span>
+                    <a ng-click="backToStep1();">填写表格</a>
+                </p>
             </div>
             <div class="item">
-                <p>风险评估</p>
+                <p><span class="icon icon-progress1"></span>风险评估</p>
             </div>
             <div class="item">
-                <p>完成见证</p>
+                <p><span class="icon icon-progress1"></span>完成见证</p>
             </div>
             <div class="item">
-                <p>提交资料</p>
+                <p><span class="icon icon-progress1"></span>提交资料</p>
             </div>
             <div class="item">
-                <p>开户成功</p>
+                <p><span class="icon icon-progress1"></span>开户成功</p>
             </div>
         </div>
     </div>
