--- a/app/views/account/register.html
+++ b/app/views/account/register.html
@@ -21,9 +21,8 @@
             <p class="title">短信验证码</p>
             <input class="auth-code-input" type="text" 
             ng-model="register.verify_code" 
-            ng-focus="focusVerifyCode();"
-            ng-blur="blurVerifyCode();">
-            <div class="btn auth-code-btn">
+            ng-focus="focusVerifyCode();">
+            <div class="btn auth-code-btn" ng-class="{disabled: register.uiCountdown}">
                 <p ng-if="!register.uiCountdown" ng-click="verifyPhone();">获取验证码</p>
                 <p ng-if="register.uiCountdown">{{register.uiCountdown}} 秒</p>
             </div>
@@ -37,7 +36,7 @@
         </div>
         <div class="item">
             <p class="title">设置登录密码</p>
-            <input type="text" ng-model="register.password" 
+            <input type="password" ng-model="register.password" 
             ng-focus="focusPassword();"
             ng-blur="blurPassword();">
             <div class="form-item-tips" 
@@ -46,6 +45,19 @@
                 error: register.uiPasswordError
             }">
                 <p>{{register.uiPasswordTip || register.uiPasswordError}}</p>
+            </div>
+        </div>
+        <div class="item">
+            <p class="title">再次确认密码</p>
+            <input type="password" ng-model="register.password2" 
+            ng-focus="focusPassword2();"
+            ng-blur="blurPassword2();">
+            <div class="form-item-tips" 
+            ng-class="{
+                hide: !register.uiPassword2Tip && !register.uiPassword2Error,
+                error: register.uiPassword2Error
+            }">
+                <p>{{register.uiPassword2Tip || register.uiPassword2Error}}</p>
             </div>
         </div>
         <div class="item">
@@ -61,11 +73,15 @@
             }">
                 <p>{{register.uiInviteCodeTip || register.uiInviteCodeError}}</p>
             </div>
+        </div>
+        <div class="item">
+            <div class="btn register-btn" 
+            ng-click="registerAccount();"
+            ng-class="{disabled: !register.uiSelected}">立即注册</div>
             <p class="error">{{register.uiServerError}}</p>
         </div>
-        <div class="btn register-btn" ng-click="registerAccount();">立即注册</div>
         <div class="ask">
-            <input type="checkbox" checked="checked">
+            <input type="checkbox" ng-model="register.uiSelected">
             <p>同意并遵守
                 <a href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/secret.pdf">隐私声明</a>
                 和
