--- a/app/views/my/change-password.html
+++ b/app/views/my/change-password.html
@@ -35,12 +35,18 @@
         </div>
         <div class="item">
             <p class="title">新密码</p>
-            <input type="text" ng-model="userInfo.new_pwd" ng-blur="checkNewPassword()" ng-focus="userInfo.uiNewPwdError = '';">
+            <input type="password" ng-model="userInfo.new_pwd" ng-blur="checkNewPassword()" ng-focus="userInfo.uiNewPwdError = '';">
             <p class="error">{{userInfo.uiNewPwdError}}</p>
+        </div>
+        <div class="item">
+            <p class="title">再次确认密码</p>
+            <input type="password" ng-model="userInfo.new_pwd2" ng-blur="checkNewPassword2()" ng-focus="userInfo.uiNewPwd2Error = '';">
+            <p class="error">{{userInfo.uiNewPwd2Error}}</p>
         </div>
         <div class="btn change-password-btn">
             <span ng-if="isLogin" ng-click="changePassword()">修改密码</span>
             <span ng-if="!isLogin" ng-click="findPassword()">找回密码</span>
+            <p class="error">{{userInfo.uiServerError}}</p>
         </div>
     </div>
     <div ng-if="loading" wd-loading></div>
