--- a/app/views/my/money-out.html
+++ b/app/views/my/money-out.html
@@ -50,7 +50,7 @@
             <p class="strong success-tip">提交成功！</p>
         </div>
         <div class="item">
-            <p class="btn" ng-click="reset();">再次入金</p>
+            <p class="btn" ng-click="reset();">再次提取</p>
         </div>
     </div>
     <div ng-if="loading" wd-loading></div>
