[feature] 增加进度显示。

--- a/app/views/account/open.html
+++ b/app/views/account/open.html
@@ -7,21 +7,34 @@
         <div class="nav-body">
             <div class="item">
                 <p>
-                    <span class="icon icon-progress2"></span>
-                    <a ng-click="backToStep1();">填写表格</a>
+                    <span class="icon" ng-class="{'icon-progress1': step < 1, 'icon-progress2': step === 1, 'icon-progress3': step > 1}"></span>
+                    <a ng-if="step === 2" ng-click="backToStep1();">填写表格</a>
+                    <span ng-if="step !== 2">填写表格</span>
                 </p>
             </div>
             <div class="item">
-                <p><span class="icon icon-progress1"></span>风险评估</p>
+                <p>
+                    <span class="icon" ng-class="{'icon-progress1': step < 2, 'icon-progress2': step === 2, 'icon-progress3': step > 2}"></span>
+                    <span>风险评估</span>
+                </p>
             </div>
             <div class="item">
-                <p><span class="icon icon-progress1"></span>完成见证</p>
+                <p>
+                    <span class="icon" ng-class="{'icon-progress1': step < 3, 'icon-progress2': step === 3, 'icon-progress3': step > 3}"></span>
+                    <span>完成见证</span>
+                </p>
             </div>
             <div class="item">
-                <p><span class="icon icon-progress1"></span>提交资料</p>
+                <p>
+                    <span class="icon icon-progress1"></span>
+                    <span>提交资料</span>
+                </p>
             </div>
             <div class="item">
-                <p><span class="icon icon-progress1"></span>开户成功</p>
+                <p>
+                    <span class="icon icon-progress1"></span>
+                    <span>开户成功</span>
+                </p>
             </div>
         </div>
     </div>
