[bugfix] 修改 iOS 软件的下载地址。

--- a/app/views/index/download.html
+++ b/app/views/index/download.html
@@ -20,7 +20,7 @@
                     <p class="title">iPhone 版本</p>
                     <p>更新日期：2014-03-31</p>
                     <div class="btn">下载</div>
-                    <a class="link" target="_blank" href="https://itunes.apple.com/cn/app/guo-jing-shan-dian-jiao-yi/id834107884?mt=8"></a>
+                    <a class="link" target="_blank" href="https://itunes.apple.com/app/mobiletws-for-iphone/id454558592"></a>
                 </div>
                 <div class="block">
                     <div class="icon icon-android"></div>
