[feature] bugfix 修正注册页面多个验证 bug。

--- a/app/styles/common/_header.scss
+++ b/app/styles/common/_header.scss
@@ -33,7 +33,11 @@
                 background-color: $standard-green;
                 .icon-right-angle {
                     margin-top: 4px;
+                    margin-left: 0px;
                     @include wd-image("icon-right-angle.png");
+                }
+                span {
+                    vertical-align: bottom;
                 }
             }
         }
