--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -9,7 +9,11 @@
                 <a ng-if="!loading && !isLogin" href="#/account-register">注册</a>
                 <a ng-if="!loading && isLogin" ng-click="logout()">退出账号</a>
                 <a href="#/about-contact">联系我们</a>
-                <a href="#/account-open" class="btn open-btn">免费开户<span class="icon-right-angle"></span></a>
+                <a href="#/account-open" class="btn open-btn">
+                    <span ng-if="!step">免费开户</span>
+                    <span ng-if="step">开户状态</span>
+                    <span class="icon-right-angle"></span>
+                </a>
             </p>
         </div>
         <div class="body">
