--- a/app/views/account/register.html
+++ b/app/views/account/register.html
@@ -21,7 +21,8 @@
             <p class="title">短信验证码</p>
             <input class="auth-code-input" type="text" 
             ng-model="register.verify_code" 
-            ng-focus="focusVerifyCode();">
+            ng-focus="focusVerifyCode();"
+            ng-blur="blurVerifyCode()">
             <div class="btn auth-code-btn" ng-class="{disabled: register.uiCountdown}">
                 <p ng-if="!register.uiCountdown" ng-click="verifyPhone();">获取验证码</p>
                 <p ng-if="register.uiCountdown">{{register.uiCountdown}} 秒</p>
@@ -90,7 +91,7 @@
     </div>
     <div ng-if="register.uiSuccess" class="success">
         <div class="icon-right"></div>
-        <p class="title">注册成功，你现在开通股票账户即可获得<span class="strong">三个月免费交易</span>。</p>
+        <p class="title">注册成功，你现在开通股票账户即可获得<span class="strong">三个月免费交易</span></p>
         <a href="#/account-open" class="btn">立即开户</a>
     </div>
     <div ng-if="loading" wd-loading></div>
