--- a/app/views/my/change-password.html
+++ b/app/views/my/change-password.html
@@ -15,9 +15,8 @@
         <div ng-if="!isLogin" class="item">
             <p class="title">短信验证码</p>
             <input class="code-input" type="text" ng-model="userInfo.code"
-            ng-focus="userInfo.uiCodeError = '';"
-            ng-blur="checkVerifyCode()">
-            <div class="btn auth-code-btn">
+            ng-focus="userInfo.uiCodeError = '';">
+            <div class="btn auth-code-btn" ng-class="{disabled: uiCountdown}">
                 <p ng-if="!uiCountdown" ng-click="verifyPhone();">获取验证码</p>
                 <p ng-if="uiCountdown">{{uiCountdown}} 秒</p>
             </div>
@@ -43,9 +42,13 @@
             <input type="password" ng-model="userInfo.new_pwd2" ng-blur="checkNewPassword2()" ng-focus="userInfo.uiNewPwd2Error = '';">
             <p class="error">{{userInfo.uiNewPwd2Error}}</p>
         </div>
-        <div class="btn change-password-btn">
-            <span ng-if="isLogin" ng-click="changePassword()">修改密码</span>
-            <span ng-if="!isLogin" ng-click="findPassword()">找回密码</span>
+
+        <div ng-if="isLogin" class="btn change-password-btn" ng-click="changePassword()">
+            <span>修改密码</span>
+            <p class="error">{{userInfo.uiServerError}}</p>
+        </div>
+        <div ng-if="!isLogin" class="btn change-password-btn" ng-click="findPassword()">
+            <span>找回密码</span>
             <p class="error">{{userInfo.uiServerError}}</p>
         </div>
     </div>
