[bugfix] 修正身份证验证等。

--- a/app/views/account/register.html
+++ b/app/views/account/register.html
@@ -84,9 +84,9 @@
         <div class="ask">
             <input type="checkbox" ng-model="register.uiSelected">
             <p>同意并遵守
-                <a href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/secret.pdf">隐私声明</a>
-                和
-                <a href="">服务条款</a></p>
+                <a target="_blank" href="http://register.guoking.com.hk:8080/WebBusiness/gk_open/pdf/secret.pdf">隐私声明</a>
+                <!-- 和<a href="">服务条款</a> -->
+            </p>
         </div>
     </div>
     <div ng-if="register.uiSuccess" class="success">
