[bugfix] 移动端 bugfix。

--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -121,6 +121,10 @@ select {
     &:active {
         @include opacity(1);
     }
+    &.disabled {
+        cursor: default;
+        background-color: $standard-deep-gray;
+    }
 }
 
 .strong {
