--- a/app/styles/account/_login.scss
+++ b/app/styles/account/_login.scss
@@ -9,6 +9,9 @@
     text-align: center;
     height: 100%;
     background-color: $standard-black;
+    .wd-body {
+        min-height: 410px;
+    }
     .header {
         padding-top: 40px;
         margin-bottom: 20px;
