--- a/app/styles/account/_open.scss
+++ b/app/styles/account/_open.scss
@@ -55,8 +55,11 @@
                 line-height: 48px;
                 height: 48px;
                 .item-title {
-                    width: 39%;
+                    width: 36%;
                     margin-right: 10px;
+                    &.category {
+                        width: 28%;
+                    }
                 }
                 p, a {
                     font-size: 16px;
