--- a/app/styles/my/_my-index.scss
+++ b/app/styles/my/_my-index.scss
@@ -7,6 +7,9 @@
 
 .wd-my-index {
     padding-top: 30px;
+    .wd-body {
+        height: 190px;
+    }
     .btn {
         margin-top: 10px;
         width: 88%;
@@ -18,12 +21,6 @@
             .title {
                 font-weight: bold;
             }
-        }
-        .logout-btn {
-            color: $standard-blue;
-            cursor: pointer;
-            float: right;
-            margin-right: 20px;
         }
     }
 }
