--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -41,7 +41,8 @@ body {
     bottom: 0px;
     font-family: 'Hiragino Sans GB','WenQuanYi Micro Hei','Microsoft YaHei','Helvetica Neue',Helvetica,Arial,sans-serif;
     .wd-view {
-        height: 100%;
+        /*height: 100%;*/
+        min-height: 730px;
         margin-bottom: -24px;
     }
 }
