[feature] 增加受理编号。

--- a/app/views/my/index.html
+++ b/app/views/my/index.html
@@ -8,6 +8,10 @@
             <p>{{userInfo.phone}}</p>
         </div>
         <div class="item">
+            <p class="title"><span class="icon-mobile"></span>受理编号：</p>
+            <p>{{userInfo.offer_id}}</p>
+        </div>
+        <div class="item">
             <p class="title"><span class="icon-hk"></span>HKD 港币：</p>
             <p class="strong num">HK${{userInfo.hkCash}}</p>
         </div>
