[feature] 增加「受理编号」。

--- a/app/views/my/my-index.html
+++ b/app/views/my/my-index.html
@@ -9,6 +9,12 @@
         </div>
         <div class="item">
             <p>
+                <span class="title">受理编号</span>
+                <span>{{userInfo.offer_id}}</span>
+            </p>
+        </div>
+        <div class="item">
+            <p>
                 <span>HKD 港币：</span>
                 <span class="strong">HK${{userInfo.hkCash}}</span>
             </p>
